--- a/ShoppingList/package.json
+++ b/ShoppingList/package.json
@@ -13,6 +13,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-vector-icons": "^6.6.0",
+    "realm": "5.0.3",
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
